# resource-manager

./: CMakeLists.txt  Dockerfile.resourceManager  README.md  build_docker_resource_manager.sh  run_docker_resource_manager.sh
src/: CMakeLists.txt  main.cpp
src/httpServer/: CMakeLists.txt
src/httpServer/include/: HttpServer.hpp
src/httpServer/interfaces/: IHttpServer.hpp
src/httpServer/src/: HttpServer.cpp
src/inventory/: CMakeLists.txt
src/inventory/include/: Inventory.hpp
src/inventory/interfaces/: IInventory.hpp
src/inventory/src/: Inventory.cpp
src/resourceManager/: CMakeLists.txt
src/resourceManager/include/: ResourceManager.hpp
src/resourceManager/interfaces/: IResourceManager.hpp
src/resourceManager/src/: ResourceManager.cpp
unit-test/: CMakeLists.txt  InventoryTest.cpp  ResourceManagerTest.cpp
unit-test/mocks/: InventoryMock.hpp
utils/http-client/: CMakeLists.txt  main.cpp
